# shape-runner

./: Cargo.toml  DEMO.md  OLLAMA_SETUP.md  QUICK_START.md  README.md  build.rs  demo.ps1  interactive-demo.ps1  run-demo.ps1
examples/: client-usage.md  feature-design-input.json  formation-airplane-15.json  formation-airplane-25.json  formation-airplane-50.json  formation-airplane.json  formation-h-30.json  formation-h-50.json  formation-h.json  formation-input-10.json  formation-input-simple.json  formation-input-small.json  formation-input-tiny.json  formation-input.json  formation-line-15.json  formation-line-20.json  formation-line-30.json  formation-line-35.json  formation-line-40.json  formation-line.json  formation-square.json  formation-test.json  formation-test2.json  formation-test3.json
proto/: shaperunner.proto
src/: client.rs  codec.rs  lib.rs  llm.rs  main.rs  rpc.rs  shape.rs  types.rs
